# multinet

./: .gitmodules  .project  KPartiteNetwork.cpp  README.md  cran_check.sh  init.cpp
Rmultinet/: DESCRIPTION  NAMESPACE  prepare.sh
Rmultinet/C++/: Makevars  Makevars.win  RcppExports.cpp  r_functions.cpp  r_functions.h  rcpp_module_definition.cpp  rcpp_utils.cpp  rcpp_utils.h
Rmultinet/R/: functions.R
Rmultinet/man/: ActorMeasures.Rd  Attributes.Rd  Classes.Rd  Communities.Rd  Conversion.Rd  Directionality.Rd  DistanceMeasures.Rd  Generation.Rd  IO.Rd  LayerMeasures.Rd  Layout.Rd  Manipulation.Rd  Navigation.Rd  Plot.Rd  Predefined.Rd  Properties.Rd  RandomWalkMeasures.Rd  Transformation.Rd  multinet-package.Rd
multinet/: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  Makefile  README.txt  multiplenetwork.doxyfile
multinet/data/: aucs.mpx
multinet/include/: community.h  datastructures.h  dtrace.h  exceptions.h  generation.h  io.h  layout.h  measures.h  multinet.h  multinet_probes.d  transformation.h  utils.h
multinet/include/community/: abacus.h  acl.h  cutils.h  flattening.h  glouvain.h  group_handler.h  group_index.h  labelpropagationsinglelayer.h  lart.h  lbl.h  ml-cpm.h  mlp.h  multilayer.h  pmm.h  single_ext.h
multinet/include/community/singleLayer/: singleLayer.h  walktrap.h
multinet/include/dtrace/headers/: dtrace.h  lart_probes.h
multinet/include/dtrace/providers/: lart_probes.d
multinet/include/utils/: counter.h  csv.h  math.h  propertymatrix.h  random.h  sortedrandommap.h  sortedrandomset.h
multinet/lib/dlib/dlib/: error.h
multinet/lib/dlib/dlib/clustering/: bottom_up_cluster.h
multinet/lib/dlib/dlib/matrix/: matrix_assign_fwd.h  matrix_data_layout.h
multinet/lib/dlib/dlib/optimization/: optimization_solve_qp_using_smo.h
multinet/lib/dlib/dlib/smart_pointers/: shared_ptr.h  shared_ptr_thread_safe.h
multinet/lib/dlib/dlib/statistics/: lda.h
multinet/lib/dlib/dlib/svm/: kkmeans.h
multinet/lib/dlib/dlib/unicode/: unicode.h
multinet/lib/eclat/apriori/src/: apriori.mak  istree.c  istree.h
multinet/lib/eclat/eclat/doc/: eclat.html
multinet/lib/eclat/eclat/ex/: flg2set  hdr2set  row2set  tab2set  test1.csv  test2.tab  test3.tab  test4.tab  test5.tab  test6.tab  tid2set
multinet/lib/eclat/eclat/src/: eclat.c  eclat.h  eclat.mak  make._at  out  test1.tab
multinet/lib/eclat/math/src/: chi2.c  gamma.c  math.mak  ruleval.c  ruleval.h
multinet/lib/eclat/tract/src/: clomax.c  clomax.h  fim16.c  fim16.h  patspec.c  patspec.h  report.c  report.h  tract.c  tract.h  tract.mak
multinet/lib/eclat/util/doc/: mit-license.txt
multinet/lib/eclat/util/src/: arrays.c  arrays.h  error.h  escape.c  escape.h  fntypes.h  memsys.c  memsys.h  scanner.c  scanner.h  symtab.c  symtab.h  tabread.c  tabread.h  tabwrite.c  tabwrite.c.backup  tabwrite.h  util.mak
multinet/lib/eigen3/Eigen/src/Core/arch/SSE/: Complex.h
multinet/lib/eigen3/Eigen/src/Core/util/: ReenableStupidWarnings.h
multinet/src/community/: abacus.cpp  acl.cpp  community_evaluation.cpp  cutils.cpp  datastructures.cpp  flattening.cpp  glouvain.cpp  group_handler.cpp  group_index.cpp  labelpropagationsingle.cpp  lart.cpp  ml-cpm.cpp  mlcpm.cpp  mlp.cpp  modularity.cpp  pmm.cpp
multinet/src/community/lbl/: mlcpm.cpp
multinet/src/community/multilayer/: lart.cpp
multinet/src/community/singleLayer/: singleLayer.cpp  walktrap.cpp
multinet/src/community/single_ext/: modularity.cpp
multinet/src/datastructures/: MLNetwork.cpp  actor_sets.cpp  clique.cpp
multinet/src/datastructures/attributes/: AttributeStore.cpp
multinet/src/datastructures/components/: actor.cpp  layer.cpp  node.cpp
multinet/src/dynamics/: contagion.cpp  state_dynamics.cpp  threshold.cpp
multinet/src/exceptions/: DuplicateElementException.cpp  FileNotFoundException.cpp  WrongParameterException.cpp
multinet/src/generation/: BAEvolutionModel.cpp  EvolutionModel.cpp  UniformEvolutionModel.cpp  evolution.cpp  evolution_strategies.cpp
multinet/src/io/: dl.cpp  graphml.cpp  multilayer.cpp
multinet/src/layout/: circular.cpp  multiforce.cpp
multinet/src/measures/: cc.cpp  correlation.cpp  degree.cpp  neighborhood.cpp
multinet/src/transformation/: anonymize.cpp  flattening.cpp  projection.cpp
multinet/src/utils/: CSVReader.cpp  math.cpp  name_conversions.cpp_tmp  random.cpp
multinet/test/: CMakeLists.txt  io1.mpx  io4.mln  lart.stp  main.cpp  print.h  test.h  test_community.cpp  test_community_cpm.cpp  test_community_singlelayer.cpp  test_counter.cpp  test_csv.cpp  test_datastructures.cpp  test_dkPol.cpp  test_dynamics.cpp  test_evolution.cpp  test_flattening.cpp  test_glouvain.cpp  test_io.cpp  test_lart.cpp  test_measures.cpp  test_mlp.cpp  test_modularity.cpp  test_pmm.cpp  test_propertymatrix.cpp  test_random.cpp  test_randomwalks.cpp  test_sortedrandomap.cpp  test_sortedrandomset.cpp  test_transformation.cpp  test_walktrap.cpp
multinet/test/data/: cpm.mpx  dkpol.mpx  io2.mpx  io3.mpx  toy_ds_for_mlp.mpx
multiplenetwork/: .RData  .Rhistory  .gitignore  Makefile  README.txt  multiplenetwork.doxyfile  pr.ncol  pr1.gml  pr2.gml  pr3.gml
multiplenetwork/fontconfig/: 8d7231e6733a9725c81b40e9f55f11b1-x86-64.cache-3  b0a71e6bf6a8a1a908413a823d76e21f-x86-64.cache-3  ef8951649ecb4e89c7d1ab953911a6bc-x86-64.cache-3
multiplenetwork/include/: community.h  counter.h  datastructures.h  dynamics.h  evolution.h  evolution.h_todo  exceptions.h  generation.h  io.h  layout.h  measures.h  mlnetwork.h  multiplenetwork.h  random.h  randomwalks.h  sortedset.cpp  sortedset.h  sortedsets.h  transformation.h  types.h  utils.h
multiplenetwork/runtest.dSYM/: .gitignore
multiplenetwork/test/: FailedUnitTestException.cpp  cpm.mpx  io2.mpx  io3.mpx  io5.mpx  main.cpp  print.cpp  print.h  run_all.cpp  test.csv  test.h  testDistanceMeasures.cpp  testEvolution.cpp  testIO.cpp  testLocalMeasures.cpp  testMLNetwork.cpp  testMeasures.cpp  testModularity.cpp  testMultilayerNetwork.cpp  testMultipleNetwork.cpp  testMultiplex.cpp  testNetwork.cpp  testRandom.cpp  testRandomWalks.cpp  testTransformations.cpp  (+17 more)
(+497 files in other folders)
